<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/linearback">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="10dp"
        android:background="#F8F7F7"
        android:layout_marginTop="60sp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_info"
            android:textColor="#232323"
            android:textSize="12dp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"/>
        <EditText
            android:drawablePadding="8sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:hint="@string/email"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:background="@color/edittext_background"
            android:fontFamily="serif-monospace"
            android:id="@+id/remail"
            android:singleLine="true"
            android:padding="10sp"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no">
        </EditText>
        <EditText
            android:drawablePadding="8sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginBottom="20sp"
            android:hint="@string/password"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:background="@color/edittext_background"
            android:fontFamily="serif-monospace"
            android:id="@+id/rpassword"
            android:singleLine="true"
            android:padding="10sp"
            android:inputType="textPassword"
            android:importantForAutofill="no">
        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_info"
            android:textColor="#232323"
            android:textSize="12dp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:drawablePadding="8sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:hint="User name"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:background="@color/edittext_background"
            android:fontFamily="serif-monospace"
            android:id="@+id/rusername"
            android:singleLine="true"
            android:padding="10sp"
            android:importantForAutofill="no"></EditText>



        <EditText
            android:drawablePadding="8sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:hint="Address"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:background="@color/edittext_background"
            android:fontFamily="serif-monospace"
            android:id="@+id/raddres"
            android:singleLine="true"
            android:padding="10sp"
            android:inputType="text"
            android:importantForAutofill="no">
        </EditText>

        <EditText
            android:drawablePadding="8sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:hint="Contact"
            android:inputType="number"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:background="@color/edittext_background"
            android:fontFamily="serif-monospace"
            android:id="@+id/rmobileno"
            android:singleLine="true"
            android:padding="10sp"
            android:importantForAutofill="no"
            ></EditText>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/newbuttonshape"
            android:text="@string/reg_btn"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:layout_marginRight="40sp"
            android:layout_marginLeft="40sp"
            android:layout_marginTop="20sp"
            android:id="@+id/r_btn">
        </Button>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#A1A0A0"
            android:layout_marginRight="40sp"
            android:layout_marginLeft="40sp"
            android:layout_marginTop="40sp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_a_member"
                android:textColor="#353535"
                android:textSize="13dp"
                android:fontFamily="sans-serif-black">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_btn"
                android:id="@+id/lg"
                android:textSize="14dp"
                android:layout_marginLeft="2dp"
                android:textColor="#353535"
                android:textStyle="bold"
                android:fontFamily="sans-serif-black">
            </TextView>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>